# Cloud-On-Mobile-Android

./: .gitignore  .gitmodules  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/cc/cloudon/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  CoreWrapper.c  EncryptorAndroidApi.c  EncryptorAndroidApi.h  bitguard.yml  logging.h  native-lib.c
app/src/main/java/cc/cloudon/: CoreWrapper.kt  CryptoAPI.kt  FileEncryptor.kt  FileListFragment.kt  FileModel.kt  FileRecyclerViewAdapter.kt  MainActivity.kt
app/src/main/java/cc/cloudon/placeholder/: FileItemContent.kt
app/src/main/res/drawable/: fi_file.xml  fi_image.xml  fi_movie.xml  fi_music.xml  ic_locked.xml  ic_unlocked.xml  layout_rounded_bg.xml  more_vertical.xml  rotate_cw.xml
app/src/main/res/layout/: activity_main.xml  fragment_file_list.xml  fragment_file_list_list.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cc/cloudon/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
